@@ -36,17 +36,13 @@ import java.util.*;
 public class StagingJobIT extends BaseTestCase {
 	private static final Logger log = Logger.getLogger(StagingJobIT.class);
 
-//	private StagingJob stagingJob;
-//	private LogicalFile file;
-//	private StagingTask task;
-//	private RemoteDataClient remoteClient;
 	private StorageSystem defaultStorageSystem;
 	private StorageSystem sftpSystem;
-	private StorageSystem gridftpSystem;
-	private StorageSystem irodsSystem;
+//	private StorageSystem irodsSystem;
 	private StorageSystem irods4System;
-	private StorageSystem ftpSystem;
-	private StorageSystem s3System;
+	//	private StorageSystem ftpSystem;
+	//	private StorageSystem s3System;
+	//	private StorageSystem gridftpSystem;
 	private ThreadLocal<HashMap<String, RemoteDataClient>> threadClientMap = new ThreadLocal<HashMap<String, RemoteDataClient>>();
 	private ThreadLocal<String> uniqueSrcTestDir = new ThreadLocal<String>();
 	private ThreadLocal<String> uniqueDestTestDir = new ThreadLocal<String>();
@@ -62,13 +58,13 @@ public class StagingJobIT extends BaseTestCase {
 
 		defaultStorageSystem = initSystem("sftp", true, true);
 		sftpSystem = initSystem("sftp", false, false);
-		gridftpSystem = initSystem("gridftp", false, false);
-		ftpSystem = initSystem("ftp", false, false);
-		s3System = initSystem("s3", false, false);
-		irodsSystem = initSystem("irods", false, false);
 		irods4System = initSystem("irods4", false, false);
+//		irodsSystem = initSystem("irods", false, false);
+//		gridftpSystem = initSystem("gridftp", false, false);
+//		ftpSystem = initSystem("ftp", false, false);
+//		s3System = initSystem("s3", false, false);
 
-		testSystems = Collections.singletonList(sftpSystem);// irods4System);//defaultStorageSystem, sftpSystem, s3System, irodsSystem, );
+		testSystems = List.of(sftpSystem, irods4System);//defaultStorageSystem, sftpSystem, s3System, irodsSystem, );
 	}
 	
 	private StorageSystem initSystem(String protocol, boolean setDefault, boolean setPublic) 
@@ -148,7 +144,21 @@ public class StagingJobIT extends BaseTestCase {
 	}
 	
 	@AfterMethod
-	protected void afterMethod() throws Exception {
+	protected void afterMethod(Method m, Object[] args) throws Exception {
+
+		// disconnect client
+		for (Object arg : args) {
+			if (arg == RemoteSystem.class) {
+				RemoteSystem system = (RemoteSystem) arg;
+				try {
+
+					RemoteDataClient client = getClient(system);
+					client.disconnect();
+				} catch (Exception e) {
+					log.error("Failed to disconnect client for system " + system.getSystemId(), e);
+				}
+			}
+		}
 
 	}
 
@@ -207,7 +217,8 @@ public class StagingJobIT extends BaseTestCase {
 	 */
 	protected String createRemoteTestDir(RemoteSystem system) throws IOException, RemoteDataException {
 		String remoteBaseDir = getRemoteTestDirPath();
-		getClient(system).mkdirs(remoteBaseDir);
+		RemoteDataClient client = getClient(system);
+		client.mkdirs(remoteBaseDir);
 
 		return remoteBaseDir;
 	}
@@ -215,7 +226,6 @@ public class StagingJobIT extends BaseTestCase {
 	private StagingTask createStagingTaskForUrl(URI sourceUri, RemoteSystem destSystem, String destPath)
 	throws FileNotFoundException, Exception 
 	{
-
 		LogicalFile file = new LogicalFile(SYSTEM_OWNER, destSystem, sourceUri, destSystem.getRemoteDataClient().resolvePath(destPath));
 		file.setStatus(StagingTaskStatus.STAGING_QUEUED);
 		file.setOwner(SYSTEM_OWNER);
@@ -384,9 +394,9 @@ public class StagingJobIT extends BaseTestCase {
 	{
 		List<Object[]> testCases = new ArrayList<Object[]>();
         
-        for (StorageSystem srcSystem: testSystems) {//,ftpSystem, gridftpSystem)) {
+        for (StorageSystem srcSystem: testSystems) {
                 
-            for (StorageSystem destSystem: testSystems) {//,ftpSystem, gridftpSystem)) {
+            for (StorageSystem destSystem: testSystems) {
                 
                 if (!srcSystem.equals(destSystem)) {
                     // copy file to home directory
@@ -406,12 +416,17 @@ public class StagingJobIT extends BaseTestCase {
 		String remoteDestBaseDir = null;
 		String remoteDestPath = null;
 		String remoteExpectedPath = null;
+		RemoteDataClient srcClient = null;
+		RemoteDataClient destClient = null;
 		try
 		{
+			srcClient = getClient(sourceSystem);
+			destClient = getClient(destSystem);
+
 			// create a test src directory to stage source data
 			remoteSrcBaseDir = createRemoteTestDir(sourceSystem);
 			remoteSrcPath = remoteSrcBaseDir + "/" + LOCAL_BINARY_FILE_NAME;
-			getClient(sourceSystem).put(LOCAL_BINARY_FILE, remoteSrcPath);
+			srcClient.put(LOCAL_BINARY_FILE, remoteSrcPath);
 
 			// create a test directory and adjust expectedPath to show up there.
 			remoteDestBaseDir = createRemoteTestDir(destSystem);
@@ -420,7 +435,7 @@ public class StagingJobIT extends BaseTestCase {
 				remoteDestPath += "/" + destPath;
 			}
 			// adjust the expected path for the remote directory
-			remoteExpectedPath = remoteDestBaseDir + "/" + expectedPath;
+			remoteExpectedPath = destSystem.getStorageConfig().getHomeDir() + "/" + remoteDestBaseDir + "/" + expectedPath;
 
 			StagingTask task = createStagingTaskForUrl(new URI("agave://" + sourceSystem.getSystemId() + "/" + remoteSrcPath), destSystem, remoteDestPath);
 
@@ -431,17 +446,20 @@ public class StagingJobIT extends BaseTestCase {
             stagingJob.doExecute();
 
 			LogicalFile file = LogicalFileDao.findById(task.getLogicalFile().getId());
-			
+
+			Assert.assertNotNull(file, "Logical file for staged file should exist after staging job");
+
 			Assert.assertEquals(file.getStatus(), StagingTaskStatus.STAGING_COMPLETED.name(),
 					"Logical file status was not STAGING_COMPLETED" );
 			
-			Assert.assertTrue(getClient(destSystem).doesExist(remoteExpectedPath),
+			Assert.assertTrue(destClient.doesExist(remoteExpectedPath),
 					"Staged file is not present on the remote system.");
+
+			String stagedFileAgavePath = file.getAgaveRelativePathFromAbsolutePath();
+			Assert.assertEquals(stagedFileAgavePath, remoteExpectedPath,
+					"Expected path of " + remoteExpectedPath + " differed from the relative logical file path of " + stagedFileAgavePath);
 			
-			Assert.assertEquals(remoteExpectedPath, file.getAgaveRelativePathFromAbsolutePath(),
-					"Expected path of " + remoteExpectedPath + " differed from the relative logical file path of " + file.getAgaveRelativePathFromAbsolutePath());
-			
-			Assert.assertTrue(getClient(destSystem).isFile(remoteExpectedPath),
+			Assert.assertTrue(destClient.isFile(remoteExpectedPath),
 					"Staged file is present, but not a file on the remote system.");
 		} 
 		catch (Exception e) {
@@ -512,10 +530,6 @@ public class StagingJobIT extends BaseTestCase {
 		}
 	}
 
-
-
-
-
 	@DataProvider(parallel = false)
 	private Object[][] testStageNextAgaveFolderProvider(Method m) throws Exception
 	{
@@ -563,7 +577,7 @@ public class StagingJobIT extends BaseTestCase {
 				remoteDestPath += "/" + destPath;
 			}
 			// adjust the expected path for the remote directory
-            remoteExpectedPath = remoteDestBaseDir;
+            remoteExpectedPath = destSystem.getStorageConfig().getHomeDir() + "/" + remoteDestBaseDir;
             if (StringUtils.isNotEmpty(expectedPath)) {
                 remoteExpectedPath +=  "/" + expectedPath;
             }
@@ -577,6 +591,8 @@ public class StagingJobIT extends BaseTestCase {
 			stagingJob.doExecute();
 
 			LogicalFile file = LogicalFileDao.findById(task.getLogicalFile().getId());
+
+			Assert.assertNotNull(file, "Logical file for staged directory should exist after staging job");
 
 			Assert.assertEquals(file.getStatus(), StagingTaskStatus.STAGING_COMPLETED.name(),
 					"Logical file status was not STAGING_COMPLETED" );
@@ -723,11 +739,12 @@ public class StagingJobIT extends BaseTestCase {
 	private Object[][] testStageNextAgaveFileSourceNoPermissionProvider(Method m) throws Exception
 	{
 		return new Object[][] {		
-				{ gridftpSystem, defaultStorageSystem, "/root", "", "Staging should fail when user does not have permission on source path" },
-				{ irodsSystem, defaultStorageSystem, "/testotheruser", "", "Staging should fail when user does not have permission on source path" },
+//				{ irodsSystem, defaultStorageSystem, "/testotheruser", "", "Staging should fail when user does not have permission on source path" },
+				{ irods4System, defaultStorageSystem, "/testotheruser", "", "Staging should fail when user does not have permission on source path" },
 				{ sftpSystem, defaultStorageSystem, "/root", "", "Staging should fail when user does not have permission on source path" },
-				{ ftpSystem, defaultStorageSystem, "/root", "", "Staging should fail when user does not have permission on source path" },
-				{ s3System, defaultStorageSystem, "/", "", "Staging should fail when user does not have permission on source path" },
+//				{ gridftpSystem, defaultStorageSystem, "/root", "", "Staging should fail when user does not have permission on source path" },
+//				{ ftpSystem, defaultStorageSystem, "/root", "", "Staging should fail when user does not have permission on source path" },
+//				{ s3System, defaultStorageSystem, "/", "", "Staging should fail when user does not have permission on source path" },
 		};
 	}	
 	
